--- a/even.ipynb
+++ b/even.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "51299803-47a9-4d46-80f5-379b98a36474",
    "metadata": {},
    "outputs": [
@@ -15,12 +15,12 @@
     }
    ],
    "source": [
-    "X=[1,2,3,4,5,6]\n",
+    "X=[1,2,3,4,5,6,7,8,9,10]\n",
     "even_count=0\n",
     "for number in X:\n",
     "    if number %2==0:\n",
     "        even_count +=1\n",
-    "print(f\"the nuber of even numbers in the list is :{even_count}\")"
+    "print(f\"the nuber of even numbers in the list is :{even_count}\")\n"
    ]
   },
   {
