--- a/even.ipynb
+++ b/even.ipynb
@@ -15,12 +15,13 @@
     }
    ],
    "source": [
-    "X=[1,2,3,4,5,6,7,8,9,10]\n",
+    "X=[1,2,3,4,5,6,7,8,9,10,11,12,13,14]\n",
     "even_count=0\n",
     "for number in X:\n",
     "    if number %2==0:\n",
     "        even_count +=1\n",
-    "print(f\"the nuber of even numbers in the list is :{even_count}\")\n"
+    "print(f\"the nuber of even numbers in the list is :{even_count}\")\n",
+    "print(f\"the number of even numbers in the list is :{even_count}\")"
    ]
   },
   {
